# two-party-adaptor

./: Cargo.toml  README.md
src/: lib.rs  party_one.rs  party_two.rs  test.rs
src/utilities/mta/: mod.rs
