[package]
name = "two-party-adaptor"
version = "0.1.0"
edition = "2021"

[features]
default = ["curv-kzen/rust-gmp-kzen"]
cclst = ["class_group"]

[dependencies]
subtle = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1"
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
round-based = { version = "0.1.4", features = [] }
thiserror = "1.0.23"
derivative = "2"
sha2 = "0.9"

paillier = {version = "0.4.2", package = "kzen-paillier", default-features = false}
class_group = {version = "0.6", default-features = false, optional = true}

#[dependencies.multi-party-ecdsa]
#git = "https://github.com/KZen-networks/multi-party-ecdsa"
#default-features = false
